tests/parsing/smtlib/poly/errors/178_declare_fun_par.expected
File "tests/parsing/smtlib/poly/errors/178_declare_fun_par.psmt2", line 2, character 35-36:
2 | (declare-fun foo (par (A) () Bool) _
                                       ^
Error while parsing a function declaration, read the reserved word '_',
      but expected a closing parenthesis.
